[gd_scene load_steps=13 format=3 uid="uid://6c3teffhbwkg"]

[ext_resource type="Script" path="res://frog/core/sub_viewport.gd" id="1_hh7p1"]
[ext_resource type="Script" path="res://frog/core/markers.gd" id="2_gcfv0"]
[ext_resource type="PackedScene" path="res://frog/art/SK_frog.tscn" id="2_txihs"]

[sub_resource type="PhysicalSkyMaterial" id="PhysicalSkyMaterial_3ipuk"]

[sub_resource type="Sky" id="Sky_ojjmd"]
sky_material = SubResource("PhysicalSkyMaterial_3ipuk")

[sub_resource type="Environment" id="Environment_hlkql"]
background_mode = 2
background_energy_multiplier = 4.03
sky = SubResource("Sky_ojjmd")
tonemap_mode = 3
glow_enabled = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_87raj"]
no_depth_test = true
albedo_color = Color(0.662745, 0.52549, 0.184314, 0.403922)

[sub_resource type="SphereMesh" id="SphereMesh_bki46"]
material = SubResource("StandardMaterial3D_87raj")
radius = 0.05
height = 0.1

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_bxlrg"]
transparency = 4
no_depth_test = true
albedo_color = Color(0.223529, 0.709804, 0.631373, 0.368627)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kgyyx"]
transparency = 4
no_depth_test = true
albedo_color = Color(0.92549, 0.47451, 0.317647, 0.368627)

[sub_resource type="Curve2D" id="Curve2D_vdcp6"]
_data = {
"points": PackedVector2Array(80.8816, 52.0293, -80.8816, -52.0293, 537.341, 416.781, 0, 0, 0, 0, 458.894, 297.417, 0, 0, 0, 0, 530.419, 175.245, 0, 0, 0, 0, 578.872, 177, 0, 0, 0, 0, 664.241, 308.3, 0, 0, 0, 0, 585.409, 416.43, 0, 0, 0, 0, 537.341, 416.781)
}
point_count = 7

[sub_resource type="GDScript" id="GDScript_dcack"]
script/source = "extends \"res://frog/core/markers.gd\"
"

[node name="SubViewportContainer" type="SubViewportContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_hh7p1")

[node name="SubViewport" type="SubViewport" parent="."]
transparent_bg = true
handle_input_locally = false
snap_2d_transforms_to_pixel = true
snap_2d_vertices_to_pixel = true
msaa_3d = 2
scaling_3d_mode = 1
scaling_3d_scale = 2.0
canvas_item_default_texture_filter = 2
physics_object_picking = true
size = Vector2i(1280, 720)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.06, 1.258, 1.348)
environment = SubResource("Environment_hlkql")

[node name="Pointer" type="Node3D" parent="SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.083976, 1.29816, 0.794532)

[node name="MeshInstance3D7" type="MeshInstance3D" parent="SubViewport/Pointer"]
mesh = SubResource("SphereMesh_bki46")
skeleton = NodePath("../../Node3D/Frogdude/Frogdude2/RootNode/GeneralSkeleton/ManyBoneIK3D/Hips")
surface_material_override/0 = SubResource("StandardMaterial3D_bxlrg")

[node name="PointerSecondary" type="Node3D" parent="SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0506585, 1.29816, 0.794532)

[node name="MeshInstance3D7" type="MeshInstance3D" parent="SubViewport/PointerSecondary"]
mesh = SubResource("SphereMesh_bki46")
skeleton = NodePath("../../Node3D/Frogdude/Frogdude2/RootNode/GeneralSkeleton/ManyBoneIK3D/Hips")
surface_material_override/0 = SubResource("StandardMaterial3D_kgyyx")

[node name="Node3D" parent="SubViewport" instance=ExtResource("2_txihs")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.85, 0.668)

[node name="GeneralSkeleton" parent="SubViewport/Node3D/Frogdude/Frogdude2/RootNode" index="0"]
bones/0/position = Vector3(0.0003145, 0.382955, 0.0086102)
bones/0/rotation = Quaternion(-0.000506189, -1.96828e-05, -0.000383952, 1)
bones/1/position = Vector3(4.88573e-07, 0.0541691, 0.00119776)
bones/1/rotation = Quaternion(-0.0356371, -0.000795759, 0.000417788, 0.999364)
bones/2/position = Vector3(8.78928e-07, 0.0623332, 0.00149984)
bones/2/rotation = Quaternion(-0.000467092, 0.000295522, 1.17076e-06, 1)
bones/3/position = Vector3(1.35246e-07, 0.0695548, 0.00173862)
bones/3/rotation = Quaternion(0.0523654, -0.000479147, 0.000292915, 0.998628)
bones/4/position = Vector3(0, 0.0798094, 0.00192718)
bones/4/rotation = Quaternion(0, 0, 0, 1)
bones/5/position = Vector3(3.18309e-07, 0.059293, 0.0181969)
bones/5/rotation = Quaternion(-0.0157703, 0.000972336, -0.00036063, 0.999875)
bones/6/position = Vector3(0.0381882, 0.0659051, 0.0018699)
bones/6/rotation = Quaternion(0.5, 0.5, 0.5, -0.5)
bones/7/position = Vector3(-0.000114552, 0.0766562, -0.028059)
bones/7/rotation = Quaternion(0, 1, 0, 0)
bones/8/position = Vector3(-0.00847693, 0.0713471, 0.0629317)
bones/8/rotation = Quaternion(-0.193511, 0.865287, 0.19792, -0.417922)
bones/9/position = Vector3(0.0529485, 0.0703729, 0.00843832)
bones/9/rotation = Quaternion(-0.0552847, 0.981968, 0.0519663, 0.173152)
bones/19/position = Vector3(-0.0381882, 0.0659052, 0.00198446)
bones/19/rotation = Quaternion(0.5, -0.5, -0.5, -0.5)
bones/20/position = Vector3(-0.000114553, 0.0766562, -0.028059)
bones/20/rotation = Quaternion(0, 1, 0, 0)
bones/21/position = Vector3(0.00875021, 0.0715472, 0.0630338)
bones/21/rotation = Quaternion(0.202635, 0.866467, 0.180496, 0.41904)
bones/22/position = Vector3(-0.0528908, 0.0704094, 0.00823915)
bones/22/rotation = Quaternion(0.0939822, 0.978505, 0.062648, -0.172541)
bones/32/position = Vector3(0.0874849, -0.0302501, -0.00238975)
bones/32/rotation = Quaternion(0.993825, 0.0674296, 0.0362867, -0.0803017)
bones/33/position = Vector3(-0.0112711, 0.170836, -0.0185295)
bones/33/rotation = Quaternion(-0.0562617, -0.0195451, 0.0778771, 0.995182)
bones/34/position = Vector3(-0.00265273, 0.12459, 0.00660986)
bones/34/rotation = Quaternion(0.000832171, 0.999407, -0.011108, 0.0325666)
bones/36/position = Vector3(-0.0874698, -0.0303515, -0.000711994)
bones/36/rotation = Quaternion(0.993298, -0.0669743, -0.0166539, -0.0927103)
bones/37/position = Vector3(0.0112903, 0.170757, -0.0207968)
bones/37/rotation = Quaternion(-0.0673938, 0.0217591, -0.0778341, 0.994448)
bones/38/position = Vector3(0.00275108, 0.126561, 0.00642691)
bones/38/rotation = Quaternion(-7.43526e-05, 0.999392, -0.0103426, 0.0332918)

[node name="BoneAttachment3D" parent="SubViewport/Node3D/Frogdude/Frogdude2/RootNode/GeneralSkeleton" index="0"]
transform = Transform3D(1, 9.45085e-17, 2.88398e-17, -9.45289e-17, 1, -3.81639e-16, -2.92735e-17, 3.40006e-16, 1, 0.000208879, 0.707298, 0.0278915)

[node name="BoneAttachment3D2" parent="SubViewport/Node3D/Frogdude/Frogdude2/RootNode/GeneralSkeleton" index="1"]
transform = Transform3D(0.231941, 0.556866, 0.79684, 0.795127, -0.580422, 0.174462, 0.560336, 0.593124, -0.577403, 0.251571, 0.400474, 0.0744089)

[node name="BoneAttachment3D3" parent="SubViewport/Node3D/Frogdude/Frogdude2/RootNode/GeneralSkeleton" index="2"]
transform = Transform3D(0.32931, 0.915291, -0.231941, 0.477845, -0.373413, -0.795127, -0.814383, 0.151011, -0.560336, 0.269519, 0.403018, 0.0466162)

[node name="BoneAttachment3D4" parent="SubViewport/Node3D/Frogdude/Frogdude2/RootNode/GeneralSkeleton" index="3"]
transform = Transform3D(0.32931, 0.915291, -0.231941, 0.477845, -0.373413, -0.795127, -0.814383, 0.151011, -0.560336, 0.278925, 0.418446, 0.0204666)

[node name="BoneAttachment3D5" parent="SubViewport/Node3D/Frogdude/Frogdude2/RootNode/GeneralSkeleton" index="4"]
transform = Transform3D(0.166512, -0.614805, -0.770134, -0.814719, -0.52574, 0.243766, -0.555434, 0.586853, -0.588435, -0.259326, 0.403022, 0.0751496)

[node name="BoneAttachment3D6" parent="SubViewport/Node3D/Frogdude/Frogdude2/RootNode/GeneralSkeleton" index="5"]
transform = Transform3D(0.27402, -0.9472, 0.166512, -0.502877, -0.288702, -0.814719, 0.819773, 0.139514, -0.555434, -0.276541, 0.407869, 0.0460525)

[node name="BoneAttachment3D7" parent="SubViewport/Node3D/Frogdude/Frogdude2/RootNode/GeneralSkeleton" index="6"]
transform = Transform3D(0.27402, -0.9472, 0.166512, -0.502877, -0.288702, -0.814719, 0.819773, 0.139514, -0.555434, -0.284735, 0.424077, 0.0189543)

[node name="BoneAttachment3D8" parent="SubViewport/Node3D/Frogdude/Frogdude2/RootNode/GeneralSkeleton" index="7"]
transform = Transform3D(0.999137, -0.0198086, -0.036514, -0.0187613, -0.999409, 0.0288073, -0.0370631, -0.0280973, -0.998918, 0.0868722, -0.0269475, -0.0577192)

[node name="BoneAttachment3D9" parent="SubViewport/Node3D/Frogdude/Frogdude2/RootNode/GeneralSkeleton" index="8"]
transform = Transform3D(0.998505, 0.0194706, -0.0510762, 0.020885, -0.999409, 0.0273059, -0.0505143, -0.0283318, -0.998321, -0.0899174, -0.0301626, -0.0581019)

[node name="ManyBoneIK3D" parent="SubViewport/Node3D/Frogdude/Frogdude2/RootNode/GeneralSkeleton" index="10"]
constraints/0/kusudama_orientation = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0003145, 0.382955, 0.0086102)
constraints/0/bone_direction = Transform3D(1, -3.48144e-20, 0, -1.43228e-19, 1, 2.1684e-19, 0, 2.1684e-19, 1, 0, 0, 0)
constraints/1/kusudama_twist = Transform3D(1, 3.88113e-20, 3.19214e-38, -5.03296e-19, 1, 6.50521e-19, -5.45675e-38, 6.50521e-19, 1, 4.88573e-07, 0.0541691, 0.00119776)
constraints/1/kusudama_orientation = Transform3D(1, -3.48144e-20, 0, -1.43228e-19, 1, 2.1684e-19, 0, 2.1684e-19, 1, 4.88573e-07, 0.0541691, 0.00119776)
constraints/1/bone_direction = Transform3D(1, -1.40964e-05, -1.69567e-07, 1.40964e-05, 0.999711, 0.0240547, -1.69567e-07, -0.0240547, 0.999711, 0, 0, 0)
constraints/2/kusudama_twist = Transform3D(1, -1.6263e-19, -6.50521e-19, -1.35525e-19, 1, 1.38778e-17, 2.1684e-19, -1.38778e-17, 1, 8.78928e-07, 0.0623332, 0.00149984)
constraints/2/kusudama_orientation = Transform3D(1, -6.77626e-20, -2.1684e-19, -6.77626e-20, 1, 0, 0, 0, 1, 8.78928e-07, 0.0623332, 0.00149984)
constraints/2/bone_direction = Transform3D(1, -1.94385e-06, -2.42908e-08, 1.94385e-06, 0.999688, 0.0249886, -2.42908e-08, -0.0249886, 0.999688, 0, 0, 0)
constraints/3/kusudama_twist = Transform3D(1, 1.01644e-19, -3.25261e-19, -2.50722e-19, 1, 2.64486e-38, -3.25261e-19, -4.16334e-17, 1, 1.35246e-07, 0.0695548, 0.00173862)
constraints/3/kusudama_orientation = Transform3D(1, 6.09864e-20, -1.0842e-19, -1.21973e-19, 1, 0, -1.0842e-19, -1.38778e-17, 1, 1.35246e-07, 0.0695548, 0.00173862)
constraints/3/bone_direction = Transform3D(1, 1.54024e-17, 4.33681e-19, -1.54228e-17, 0.999627, 0.0273102, 0, -0.0273102, 0.999627, 0, 0, 0)
constraints/4/kusudama_twist = Transform3D(1, 1.35525e-19, 6.50521e-19, -6.77626e-21, 1, -2.93874e-39, 6.50521e-19, 2.05712e-38, 1, 1.0842e-19, 0.0798094, 0.00192718)
constraints/4/kusudama_orientation = Transform3D(1, 4.06576e-20, 2.1684e-19, -6.77626e-21, 1, 0, 2.1684e-19, 0, 1, 2.1684e-19, 0.0798094, 0.00192718)
constraints/4/bone_direction = Transform3D(1, -5.13216e-06, -7.69806e-07, 5.13216e-06, 0.955992, 0.293392, -7.69806e-07, -0.293392, 0.955992, 0, 0, 0)
constraints/5/kusudama_twist = Transform3D(1, 2.71051e-20, 6.50521e-19, 1.01644e-19, 1, -3.46945e-18, 6.50521e-19, 3.46945e-18, 1, 3.18309e-07, 0.059293, 0.0181969)
constraints/5/kusudama_orientation = Transform3D(1, 4.06576e-20, 2.1684e-19, -6.77626e-21, 1, 0, 2.1684e-19, 0, 1, 3.18309e-07, 0.059293, 0.0181969)
constraints/6/kusudama_twist = Transform3D(6.60401e-16, 1, -1.73472e-17, -1, 7.02624e-16, 1.21431e-17, -4.55365e-18, -6.93889e-18, 1, 0.0381882, 0.0659051, 0.0018699)
constraints/6/kusudama_orientation = Transform3D(1, 4.06576e-20, 2.1684e-19, -6.77626e-21, 1, 0, 2.1684e-19, 0, 1, 0.0381882, 0.0659051, 0.0018699)
constraints/6/bone_direction = Transform3D(0.999999, 0.0014033, -0.00024876, -0.0014033, 0.939066, -0.343733, -0.00024876, 0.343733, 0.939067, 0, 0, 0)
constraints/7/kusudama_twist = Transform3D(0.624649, 0.765446, 0.154615, -0.765446, 0.56096, 0.315303, 0.154615, -0.315303, 0.936311, -0.000114552, 0.0766562, -0.028059)
constraints/7/kusudama_orientation = Transform3D(1, 2.1684e-19, 0, 2.1684e-19, 1, 4.06576e-20, 0, -6.77626e-21, 1, -0.000114552, 0.0766562, -0.028059)
constraints/7/bone_direction = Transform3D(0.995491, 0.0887519, 0.0334731, -0.0887519, 0.746991, 0.658883, 0.0334731, -0.658883, 0.7515, 0, 0, 0)
constraints/8/kusudama_twist = Transform3D(0.894427, -0.447214, 4.24261e-20, 0.447214, 0.894427, 1.03235e-17, -3.46945e-18, -1.85331e-17, 1, -0.00847693, 0.0713471, 0.0629317)
constraints/8/kusudama_orientation = Transform3D(1, -2.1684e-19, 0, -2.1684e-19, 1, -4.06576e-20, 0, 6.77626e-21, 1, -0.00847693, 0.0713471, 0.0629317)
constraints/8/bone_direction = Transform3D(0.800503, -0.598485, -0.0317936, 0.598485, 0.795436, 0.0953796, -0.0317936, -0.0953796, 0.994933, 0, 0, 0)
constraints/9/kusudama_twist = Transform3D(1, 6.16298e-33, -1.66533e-16, -1.11022e-16, 1, 5.55112e-17, -1.11022e-16, -8.32667e-17, 1, 0.0529485, 0.0703729, 0.00843832)
constraints/9/kusudama_orientation = Transform3D(1, -6.93889e-17, -5.55112e-17, 1.38778e-17, 1, 0, -5.55112e-17, -2.77556e-17, 1, 0.0529485, 0.0703729, 0.00843832)
constraints/9/bone_direction = Transform3D(0.995795, 0.0912252, 0.00833803, -0.0912252, 0.979261, 0.180905, 0.00833803, -0.180905, 0.983465, 0, 0, 0)
constraints/19/kusudama_twist = Transform3D(3.26331e-16, -1, 2.08167e-17, 1, 3.71102e-16, 2.49366e-17, -1.14925e-17, -1.13141e-36, 1, -0.0381882, 0.0659052, 0.00198446)
constraints/19/kusudama_orientation = Transform3D(1, 4.06576e-20, 2.1684e-19, -6.77626e-21, 1, 0, 2.1684e-19, 0, 1, -0.0381882, 0.0659052, 0.00198446)
constraints/19/bone_direction = Transform3D(0.999999, 0.00140332, -0.000248762, -0.00140332, 0.939066, -0.343733, -0.000248762, 0.343733, 0.939067, 0, 0, 0)
constraints/20/kusudama_twist = Transform3D(0.718038, -0.694822, -0.0405461, 0.694822, 0.712207, 0.0999153, -0.0405461, -0.0999153, 0.994169, -0.000114553, 0.0766562, -0.028059)
constraints/20/kusudama_orientation = Transform3D(1, 2.1684e-19, 0, 2.1684e-19, 1, -4.06576e-20, 0, 6.77626e-21, 1, -0.000114553, 0.0766562, -0.028059)
constraints/20/bone_direction = Transform3D(0.995221, -0.0913822, -0.0344299, 0.0913822, 0.747198, 0.658289, -0.0344299, -0.658289, 0.751978, 0, 0, 0)
constraints/21/kusudama_twist = Transform3D(0.894427, 0.447214, 1.04508e-17, -0.447214, 0.894427, 2.09015e-17, 6.93889e-18, -3.35018e-17, 1, 0.00875021, 0.0715472, 0.0630338)
constraints/21/kusudama_orientation = Transform3D(1, -2.1684e-19, 0, -2.1684e-19, 1, 4.06576e-20, 0, -6.77626e-21, 1, 0.00875021, 0.0715472, 0.0630338)
constraints/21/bone_direction = Transform3D(0.800898, 0.597997, 0.0310154, -0.597997, 0.796067, 0.0931539, 0.0310154, -0.0931539, 0.995169, 0, 0, 0)
constraints/22/kusudama_twist = Transform3D(1, -2.77556e-17, 1.11022e-16, 5.55112e-17, 1, 1.11022e-16, -1.11022e-16, 2.77556e-17, 1, -0.0528908, 0.0704094, 0.00823915)
constraints/22/kusudama_orientation = Transform3D(1, -1.38778e-17, 5.55112e-17, 2.77556e-17, 1, 2.77556e-17, -5.55112e-17, 1.38778e-17, 1, -0.0528908, 0.0704094, 0.00823915)
constraints/22/bone_direction = Transform3D(0.997524, -0.0702266, -0.00374294, 0.0702266, 0.991866, 0.106162, -0.00374294, -0.106162, 0.994342, 0, 0, 0)
constraints/32/kusudama_twist = Transform3D(-0.999999, -0.00156719, -1.56463e-06, -0.00156719, 0.999997, 0.00199673, -1.56463e-06, 0.00199673, -0.999998, 0.0874849, -0.0302501, -0.00238975)
constraints/32/kusudama_orientation = Transform3D(1, -3.48144e-20, 0, -1.43228e-19, 1, 2.1684e-19, 0, 2.1684e-19, 1, 0.0874849, -0.0302501, -0.00238975)
constraints/32/bone_direction = Transform3D(0.99785, 0.0654508, -0.00353533, -0.0654508, 0.992038, -0.1076, -0.00353533, 0.1076, 0.994188, 0, 0, 0)
constraints/33/kusudama_twist = Transform3D(1, -3.46945e-18, 3.08149e-33, -1.05208e-17, 0.433189, 0.901303, 7.06583e-17, -0.901303, 0.433189, -0.0112711, 0.170836, -0.0185295)
constraints/33/kusudama_orientation = Transform3D(1, 0, 1.38778e-17, -1.9082e-17, 1, 0, 1.38778e-17, 0, 1, -0.0112711, 0.170836, -0.0185295)
constraints/33/bone_direction = Transform3D(0.999774, 0.021257, 0.000563412, -0.021257, 0.99837, 0.0529664, 0.000563412, -0.0529664, 0.998596, 0, 0, 0)
constraints/34/kusudama_twist = Transform3D(-5.56816e-16, 1, -1.38778e-17, -1, -3.80484e-16, 1.69136e-17, -3.45318e-17, -3.08149e-33, 1, -0.00265273, 0.12459, 0.00660986)
constraints/34/kusudama_orientation = Transform3D(1, 2.82909e-18, -1.0842e-19, -8.50421e-19, 1, 0, 1.6263e-19, 6.93889e-18, 1, -0.00265273, 0.12459, 0.00660986)
constraints/34/bone_direction = Transform3D(0.999596, -0.0198085, 0.0203691, 0.0198085, -0.0280973, -0.999409, 0.0203691, 0.999409, -0.0276936, 0, 0, 0)
constraints/36/kusudama_twist = Transform3D(-0.999999, -0.00156719, -1.56463e-06, -0.00156719, 0.999997, 0.00199673, -1.56463e-06, 0.00199673, -0.999998, -0.0874698, -0.0303515, -0.000711994)
constraints/36/kusudama_orientation = Transform3D(1, -3.48144e-20, 0, -1.43228e-19, 1, 2.1684e-19, 0, 2.1684e-19, 1, -0.0874698, -0.0303515, -0.000711994)
constraints/36/bone_direction = Transform3D(0.997845, -0.0654932, 0.0039693, 0.0654932, 0.990534, -0.120639, 0.0039693, 0.120639, 0.992689, 0, 0, 0)
constraints/37/kusudama_twist = Transform3D(1, 5.20417e-18, -4.85723e-17, 4.61421e-17, 0.433189, 0.901303, 3.22523e-17, -0.901303, 0.433189, 0.0112903, 0.170757, -0.0207968)
constraints/37/kusudama_orientation = Transform3D(1, -1.9082e-17, 6.93889e-18, 1.04083e-17, 1, 5.55112e-17, 0, -2.77556e-17, 1, 0.0112903, 0.170757, -0.0207968)
constraints/37/bone_direction = Transform3D(0.999764, -0.0217041, -0.00055066, 0.0217041, 0.998478, 0.0507038, -0.00055066, -0.0507038, 0.998714, 0, 0, 0)
constraints/38/kusudama_twist = Transform3D(1.74184e-17, 1, -1.38778e-17, -1, 1.61275e-18, 4.81928e-17, -3.03577e-18, -6.93889e-18, 1, 0.00275108, 0.126561, 0.00642691)
constraints/38/kusudama_orientation = Transform3D(1, 3.72694e-19, 0, 2.71051e-20, 1, 6.93889e-18, 1.0842e-19, 0, 1, 0.00275108, 0.126561, 0.00642691)
constraints/38/bone_direction = Transform3D(0.99961, 0.0194707, -0.0200266, -0.0194707, -0.0283318, -0.999409, -0.0200266, 0.999409, -0.0279416, 0, 0, 0)

[node name="Hips" parent="SubViewport/Node3D/Frogdude/Frogdude2/RootNode/GeneralSkeleton/ManyBoneIK3D" index="0"]
script = ExtResource("2_gcfv0")

[node name="Path2D" type="Path2D" parent="SubViewport/Node3D/Frogdude/Frogdude2/RootNode/GeneralSkeleton/ManyBoneIK3D/Hips" index="1"]
position = Vector2(-845.339, -479.172)
scale = Vector2(2.60047, 2.84843)
curve = SubResource("Curve2D_vdcp6")

[node name="Head" parent="SubViewport/Node3D/Frogdude/Frogdude2/RootNode/GeneralSkeleton/ManyBoneIK3D" index="1"]
script = ExtResource("2_gcfv0")

[node name="LeftLowerArm" parent="SubViewport/Node3D/Frogdude/Frogdude2/RootNode/GeneralSkeleton/ManyBoneIK3D" index="2"]
script = SubResource("GDScript_dcack")

[node name="LeftHand" parent="SubViewport/Node3D/Frogdude/Frogdude2/RootNode/GeneralSkeleton/ManyBoneIK3D" index="3"]
script = ExtResource("2_gcfv0")

[node name="RightLowerArm" parent="SubViewport/Node3D/Frogdude/Frogdude2/RootNode/GeneralSkeleton/ManyBoneIK3D" index="4"]
script = ExtResource("2_gcfv0")

[node name="RightHand" parent="SubViewport/Node3D/Frogdude/Frogdude2/RootNode/GeneralSkeleton/ManyBoneIK3D" index="5"]
script = ExtResource("2_gcfv0")

[node name="LeftLowerLeg" parent="SubViewport/Node3D/Frogdude/Frogdude2/RootNode/GeneralSkeleton/ManyBoneIK3D" index="6"]
script = ExtResource("2_gcfv0")

[node name="LeftFoot" parent="SubViewport/Node3D/Frogdude/Frogdude2/RootNode/GeneralSkeleton/ManyBoneIK3D" index="7"]
script = ExtResource("2_gcfv0")

[node name="RightLowerLeg" parent="SubViewport/Node3D/Frogdude/Frogdude2/RootNode/GeneralSkeleton/ManyBoneIK3D" index="8"]
script = ExtResource("2_gcfv0")

[node name="RightFoot" parent="SubViewport/Node3D/Frogdude/Frogdude2/RootNode/GeneralSkeleton/ManyBoneIK3D" index="9"]
script = ExtResource("2_gcfv0")

[node name="Label3D" type="Label3D" parent="SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.480718, 1.64879, 0.156756)
no_depth_test = true
text = "LASSO_POINT
"
font_size = 16

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="SubViewport"]
transform = Transform3D(-0.866024, -0.428136, 0.258267, 0, 0.516532, 0.856268, -0.500003, 0.741548, -0.447329, 0, 0, 0)
shadow_enabled = true

[editable path="SubViewport/Node3D"]
[editable path="SubViewport/Node3D/Frogdude"]
